# Generic-Lib

./: CMakeLists.txt
include/hello_world/: hello_world.hpp
src/hello_world/: CMakeLists.txt  hello_internal.hpp  hello_world.cpp
